--- a/Demo_FootBall_Field/app/src/main/res/layout/activity_main.xml
+++ b/Demo_FootBall_Field/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:gravity="center"
     android:orientation="vertical">
 
-    <tw.noel.sung.com.demo_football_field.game_view.FootBallFieldView
+    <tw.noel.sung.com.demo_football_field.game_view.rectangle.RectangleGameFieldView
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
+
 </LinearLayout>
